# motivharia

./: .gitignore  README.md  autores.txt  converttxtcsv.py  environment.yml  extractauth.py  frases.txt  getfrase.py  lastbuildsqlite.py  main.py  maina.py  mainf.py  pyproject.toml  readme.md  textual.py  textuals.py  try.py
buildata/: all.py  getauth.py
data/: autores.csv  frases.clean.csv  frases.csv  motivharia.toml
motivharia/: autor.py  controlador.py  frase.py  listaautores.py  listafrases.py  main.py  proveedorautores.py  proveedorautorescsv.py  proveedorautoresi.py  proveedorautoressql.py  proveedordatos.py  proveedorfrases.py  proveedorfrasescsv.py  proveedorfrasesi.py  proveedorfrasessql.py
motivharia/buildata/: all.py  converttxtcsv.py  getauth.py  getfrase.py  lastbuildsqlite.py
motivharia/model/: database.py  dcsv.py  frase.py  listaautores.py  listafrases.py  proveedorautores.py  proveedorautorescsv.py  proveedorautoresi.py  proveedorautoressql.py  proveedorfrases.py  proveedorfrasescsv.py  proveedorfrasesi.py  proveedorfrasessql.py
motivharia/view/: acercascreen.py  autorestablascreen.py  frasestablasscreen.py  principalscreen.py  splashscreen.py
original/: database.db  frases.clean.txt
temp/buildata/: converttxtcsv.py  getauth.py  getfrase.py  lastbuildsqlite.py
temp/model/: mainf.py  testtoml.py
temp/textual/: textuals.py
temp/view/: datatabl.py  textuals.py
tests/: test_autor.py  test_controlador.py  test_listaautores.py
